# ResumeAI

./: .env  .gitignore  README.md  chatbot.py  llm_handler.py  main.py  pyproject.toml  resume_editor.py
app/: main.py
app/api/: app.py
app/models/: resume.py
app/services/: chatbot.py  llm_handler.py  prompt.py  resume.py  resume_editor.py  tools.py
app/static/: index.html
app/uploads/: main.tex
app/utils/: file.py  util.py
static/: index.html
